# jobtask

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
data/: phones.csv
src/: csv_filter.py  tests.py
