[project]
name = "jobtask"
version = "0.1.0"
description = ""
authors = [
    {name = "fourvleg",email = "fourvleg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
